@@ -9,7 +9,7 @@
         <x>0</x>
         <y>0</y>
         <width>261</width>
-        <height>150</height>
+        <height>210</height>
       </rect>
     </property>
     <property name="sizePolicy" >
@@ -79,6 +79,26 @@
             </widget>
           </item>
         </layout>
+      </item>
+      <item>
+        <widget class="QLabel" name="textLabel1" >
+          <property name="text" >
+            <string>Dimensions</string>
+          </property>
+          <property name="wordWrap" >
+            <bool>false</bool>
+          </property>
+        </widget>
+      </item>
+      <item row="1" column="1" >
+        <widget class="QLineEdit" name="m_dimensionsValue" >
+          <property name="readOnly" >
+           <bool>true</bool>
+          </property>
+          <property name="enabled" >
+           <bool>false</bool>
+          </property>
+        </widget>
       </item>
       <item>
         <spacer name="spacer3" >
