@@ -8,6 +8,7 @@ Changes for 1.3.8
       hidden triangles
    Change Hide Unselected so that it operates on the face level rather than
       face and vertex
+   Show dimensions of selected geometry in context panel
    Added grid unit distance to status bar
    Fix viewport drawing mode so that it is applied to loaded models
    Fix texture rendering after deleted textures (off by one on greater index)
